--- a/assests/css/input.css
+++ b/assests/css/input.css
@@ -1,6 +1,7 @@
-/* @tailwind base;
+@tailwind base;
 @tailwind components;
 @tailwind utilities;
+/*  
 body{
     font-family: "Encode Sans Expanded", sans-serif;
     font-weight: 200;
